src/styles/globals.scss
@use './variables' as *;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: $font-body;
  color: $black;
  background-color: $white;
  line-height: 1.6;
}

a {
  color: inherit;
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font-headline;
  font-weight: 600;
  line-height: 1.2;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

button {
  font-family: inherit;
  cursor: pointer;
  border: none;
  background: none;
}

input,
textarea,
select {
  font-family: inherit;
}

// Accessibility
:focus-visible {
  outline: 2px solid $dark-red;
  outline-offset: 2px;
}

// Scrollbar styling
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-track {
  background: $light-gray;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: $dark-gray;
  border-radius: 10px; // Fully rounded

  &:hover {
    background: $black;
  }
}

